# Saraswati

./: .gitignore  CMakeLists.txt  Note.cpp  Note.h  README.md  Scale.cpp  Scale.h  Synthesis.cpp  Synthesis.h  build.sh  generate.sh  main.cpp
include/: IEEEExtended.h  Scale.h  Synthesis.h  Util.h
src/: AIFF.cpp  AIFF.h  Endian.h  IEEEExtended.cpp  IEEEExtended.h  Note.cpp  Note.h  Scale.cpp  Synthesis.cpp  Synthesis.h  Util.cpp  Util.h  main.cpp
src/utility/: amplify.cpp  audio2Text.cpp  invert_phase.cpp  mix.cpp  normalize.cpp  pan.cpp
test/: main.cpp
